@@ -1,11 +1,15 @@
 # 2024.08.?? - 1.0.10
 
+- fix: Menu debug messages removed from server console
+- fix: Database migration support enhanced for MySQL and MariaDB aswell
+
 - todo:
     - fix: target issue when printing no target found and then adding ban by steamid even if online
     - fix: Add debounce timer to playerspawn events to prevent multiple min player messages
 		- feat: SimpleAdmin transfer script
 		- fix: Check if transfer logs even if no k4-system tables found
 		- fix: Check custom tags matcher
+    - fix: Settings menu not load default values properly
 
 # 2024.09.01 - 1.0.9
 
